# tmd-aws-exporter

./: Cargo.toml  Dockerfile  LICENSE  README.md  justfile
src/: aws.rs  main.rs  prometheus.rs
